Fresh Upload: Complete Backend (Java, Python, Go)