@@ -1,70 +1,98 @@
 package com.smartproctor.backend.config;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.provisioning.InMemoryUserDetailsManager;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.List;
+import org.springframework.web.filter.CorsFilter;
+
+import java.util.Arrays;
 
 @Configuration
+@EnableWebSecurity
+@EnableMethodSecurity // Enables @PreAuthorize
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final JwtAuthenticationFilter jwtAuthFilter;
+    private final ApiKeyAuthFilter apiKeyAuthFilter;
+    private final UserDetailsService userDetailsService;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // <--- CONNECTING CORS HERE
+            .csrf(csrf -> csrf.disable()) // Disable CSRF for stateless APIs
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Enable CORS
             .authorizeHttpRequests(auth -> auth
-                // 1. PUBLIC ENDPOINTS
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/exam/active").permitAll()
-                .requestMatchers("/api/exam/report-cheat").permitAll()
-                .requestMatchers("/api/exam/status").permitAll() // <--- Allow Dashboard to check status
+                // 1. Public Endpoints
+                .requestMatchers("/api/auth/**").permitAll() // Login/Register
+                .requestMatchers("/api/students/**").permitAll() // Student Join/Status
+                .requestMatchers("/api/exams/*/questions/take").permitAll() // Student fetching paper
+                .requestMatchers("/api/exams/*/answers").permitAll() // Student submitting answers
+                .requestMatchers("/api/exams/*/submit").permitAll()
+                .requestMatchers("/api/exams/*/transcript").permitAll()
 
-                // 2. ADMIN ENDPOINTS
-                .requestMatchers("/api/exam/create").hasRole("ADMIN")
+                // 2. Proctor Endpoints (Protected by API Key Filter, so permitAll here to bypass login)
+                .requestMatchers("/api/proctor/**").permitAll()
 
-                // 3. ALL OTHERS LOCKED
+                // 3. Static Resources (Images)
+                .requestMatchers("/uploads/**").permitAll()
+
+                // 4. Everything else requires JWT (Professor Dashboard)
                 .anyRequest().authenticated()
             )
-            .httpBasic(basic -> {});
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authenticationProvider(authenticationProvider())
+            .addFilterBefore(apiKeyAuthFilter, UsernamePasswordAuthenticationFilter.class) // Check API Key first
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);   // Then check JWT
 
         return http.build();
     }
 
-    // --- THE NEW CORS CONFIGURATION ---
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public AuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+        authProvider.setUserDetailsService(userDetailsService);
+        authProvider.setPasswordEncoder(passwordEncoder());
+        return authProvider;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    // CORS Configuration (Crucial for React connection)
+    @Bean
+    public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // This explicitly allows ANY connection, but using the "Patterns" method
-        // which fixes the "allowCredentials" error.
-        configuration.setAllowedOriginPatterns(List.of("*"));
-
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000")); // Allow React
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-API-KEY"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-
-    @Bean
-    public UserDetailsService userDetailsService() {
-        UserDetails admin = User.withDefaultPasswordEncoder()
-            .username("admin")
-            .password("password")
-            .roles("ADMIN")
-            .build();
-            
-        return new InMemoryUserDetailsManager(admin);
     }
 }
